// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context app function fetchAnchor should update search source correctly when useFieldApi set to false 1`] = `
Object {
  "_source": Object {},
  "fields": Array [],
  "query": Object {
    "bool": Object {
      "filter": Array [],
      "must": Array [
        Object {
          "constant_score": Object {
            "filter": Object {
              "ids": Object {
                "values": Array [
                  "id",
                ],
              },
            },
          },
        },
      ],
      "must_not": Array [],
      "should": Array [],
    },
  },
  "runtime_mappings": Object {},
  "script_fields": Object {},
  "size": 1,
  "sort": Array [],
  "stored_fields": Array [
    "*",
  ],
  "track_total_hits": false,
  "version": true,
}
`;

exports[`context app function fetchAnchor should update search source correctly when useFieldApi set to true 1`] = `
Object {
  "_source": false,
  "fields": Array [
    Object {
      "field": "_source",
    },
    Object {
      "field": "_index",
    },
    Object {
      "field": "message",
    },
    Object {
      "field": "extension",
    },
    Object {
      "field": "bytes",
    },
    Object {
      "field": "scripted",
    },
    Object {
      "field": "object.value",
    },
  ],
  "query": Object {
    "bool": Object {
      "filter": Array [],
      "must": Array [
        Object {
          "constant_score": Object {
            "filter": Object {
              "ids": Object {
                "values": Array [
                  "id",
                ],
              },
            },
          },
        },
      ],
      "must_not": Array [],
      "should": Array [],
    },
  },
  "runtime_mappings": Object {},
  "script_fields": Object {},
  "size": 1,
  "sort": Array [],
  "stored_fields": Array [
    "*",
  ],
  "track_total_hits": false,
  "version": true,
}
`;
